--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="jam">-:-</div>
           <div class="tanggal">-</div>
           <div class="ucapan" onclick="carigoogle()"><span id="spannama2"></span></div>
-          <a href="https://api.whatsapp.com/send?phone=+6289639600216&text=I Love You ❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️            (Creator HisnuAhdana)">
+          <a href="https://api.whatsapp.com/send?phone=+6289639600216&text=I Love You ❤️🔥">
         <button style="background:#32C03C;vertical-align:center;height:36px;border-radius:5px">
      Chat hisnu yaw🐣</button></a>
         </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="mycontent">
             Gw suka sama lu hehehe.
-            Btw berantem yok? hehee >\\<
+            Btw mau gak jadi babu gw? hehee >\\<
           </div>
           <div class="mybutton">
             <div class="mybuttonno" onmouseover="move()" onclick="move2()">Nggak</div>
