--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="ucapan" onclick="carigoogle()"><span id="spannama2"></span></div>
           <a href="https://api.whatsapp.com/send?phone=+6289639600216&text=I Love You ❤️🔥">
         <button style="background:#32C03C;vertical-align:center;height:36px;border-radius:5px">
-     Chat hisnu yaw🐣</button></a>
+     CHAT OWNER</button></a>
         </div>
       </div>
       <div class="mywindow" id="myform">
@@ -52,7 +52,7 @@
           <div class="mymax"></div>
         </div>
         <div class="myheader">
-          Hai cantikk
+          Hai babi 🐶
         </div>
         <div class="mybody">
           <div class="mytitle">
