--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HisnuAhdanaRisangFatkhi</title>
+    <title>Hisnuahdanarisangfatkhi</title>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
@@ -24,7 +24,7 @@
       <div class="divvideo">
         <video id="myVideo" width="100%" height="100%">
           <source src="assets/video.mp4" type="video/mp4" />
-          Your browser doe`s not support HTML5 video.
+          Browser lu kentang meki.
         </video>
       </div>
     </div>
@@ -32,17 +32,17 @@
     <div class="container">
       <div class="myclock">
         <div class="myakun" id="nama">
-          <span id="spannama3" onclick="gantinama()"></span>
+          <span id="spannama3" onclick="change name()"></span>
         </div>
-        <div class="myakun reset" onclick="reverse()">Reset</div>
+        <div class="reset" onclick="reverse()">reset</div>
         <div class="myakun" onclick="toggleFullscreen()">Fullscreen</div>
         <div class="contjam">
           <div class="jam">-:-</div>
           <div class="tanggal">-</div>
           <div class="ucapan" onclick="carigoogle()"><span id="spannama2"></span></div>
-          <a href="https://api.whatsapp.com/send?phone=+6289639600216&text=I Love You ❤️🔥">
+          <a href="https://api.whatsapp.com/send?phone=+50588893287&text=JancokWe">
         <button style="background:#32C03C;vertical-align:center;height:36px;border-radius:5px">
-     CHAT OWNER</button></a>
+     Own</button></a>
         </div>
       </div>
       <div class="mywindow" id="myform">
@@ -52,15 +52,15 @@
           <div class="mymax"></div>
         </div>
         <div class="myheader">
-          Hai babi 🐶
+          We
         </div>
         <div class="mybody">
           <div class="mytitle">
-            Ini ngetes doang ya kak,kalau serius boleh kok...❤️🐣
+            Asu vito
           </div>
           <div class="mycontent">
             <div>Nama :</div>
-            <input class="mytext" type="text" id="mynama" name="nama" required />
+            <input class="mytext" type="text" id="mynama" name="your name" required />
           </div>
           <div class="mybutton">
             <div class="mybuttonyes" onclick="mywrite()">oke</div>
@@ -79,8 +79,7 @@
             Pliss jawab:(
           </div>
           <div class="mycontent">
-            Gw suka sama lu hehehe.
-            Btw mau gak jadi babu gw? hehee >\\<
+            We kontol babu>\\<
           </div>
           <div class="mybutton">
             <div class="mybuttonno" onmouseover="move()" onclick="move2()">Nggak</div>
